# bot_personal_trainer

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: bot.yml
app/: main.py
app/db/: db.py
app/handlers/v1/: activities_handlers.py  profile_handlers.py  user_logic_handlers.py
app/models/: user.py
app/services/: nutrition_cal_service.py  translation_service.py  weather_service.py  workout_service.py
app/settings/: config.py  logging.py
app/utils/: find_directory.py
