[tool.poetry]
package-mode=false
name = "bot-personal-trainer"
version = "0.1.0"
description = "Telegram bot for calculating water, calories, and activity tracking"
authors = ["Nikita Filonenko"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
aiogram = "^3.17.0"
requests = "^2.32.3"
pydantic = {extras = ["all"], version = "^2.10.5"}
pydantic-settings = "^2.7.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
